--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,27 @@
-name: Node application
+name: Docker Build
 
 on:
   push:
     branches:
-      - main # Change this to the branch you want to trigger the workflow on
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Build image
-        run: |
-          docker build -t node-app
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '16'
+
+    - name: Build Docker image
+      run: |
+        docker build -t your-image-name .
+        docker images
+
+    - name: Run Docker container
+      run: docker run your-image-name
