--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+  # schedule:
+  #   - cron: '0 0 * * 1'  # Run every Monday at midnight UTC
 
 jobs:
   build:
